clang/test/BSC/Negative/Ownership/RuleCheck/return/return.cbs
// RUN: %clang_cc1 -verify %s

struct A {};

void func4(int * owned a) {
	return;
	int * b = (int *)a;
} // expected-error {{memory leak of value: `a`}}

void func5(int num) {
	int b = 5;
	int * owned p = (int * owned)&b;
	int * owned a;
	if (num > 0) {
		a = p;
	} else {
		return; // expected-error {{memory leak of value: `p`}}
	}
} // expected-error {{memory leak of value: `a`}}

void func(struct A * owned a) {
	struct A * owned b = a;
} // expected-error {{memory leak of value: `b`}}

void func9(int * owned a) {
	{
		int * p = (int *)a;
	}
	{
		int * owned q = a; // expected-error {{use of moved value: `a`}}
	} // expected-error {{memory leak of value: `q`}}
}

int main() {
	return 0;
}